[package]
name = "sentiment"
version = "0.1.1"
authors = ["shockham <samuel.hockham@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mount-research/sentiment"
homepage = "https://github.com/mount-research/sentiment"
documentation = "https://docs.rs/sentiment"
description = "Sentiment analysis tool"

[dependencies]
regex = "1.0"
serde_json = "1.0"
lazy_static = "1.0"
